{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 446,
  "lineage": "ba85356e-c857-47a4-7ad4-dc1d68ce81ce",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.170.104.42",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-04T05:18:26.306-08:00",
            "id": "projects/avid-bricolage-362013/regions/us-central1/addresses/ipv4-address-a",
            "name": "ipv4-address-a",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "avid-bricolage-362013",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/regions/us-central1/addresses/ipv4-address-a",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/zones/us-central1-c/instances/instance-from-template-a"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.27.169.182",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-04T05:18:26.292-08:00",
            "id": "projects/avid-bricolage-362013/regions/us-central1/addresses/ipv4-address-b",
            "name": "ipv4-address-b",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "avid-bricolage-362013",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/regions/us-central1/addresses/ipv4-address-b",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/zones/us-central1-c/instances/instance-from-template-b"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.72.73.118",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-04T05:18:26.292-08:00",
            "id": "projects/avid-bricolage-362013/regions/us-central1/addresses/ipv4-address-c",
            "name": "ipv4-address-c",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "avid-bricolage-362013",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/regions/us-central1/addresses/ipv4-address-c",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/zones/us-central1-c/instances/instance-from-template-c"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-04T05:19:01.521-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/avid-bricolage-362013/global/firewalls/ssh-firewall",
            "log_config": [],
            "name": "ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/global/networks/terraform-network",
            "priority": 1000,
            "project": "avid-bricolage-362013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/global/firewalls/ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-5000",
                  "50051"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-04T05:19:02.165-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/avid-bricolage-362013/global/firewalls/web-firewall",
            "log_config": [],
            "name": "web-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/global/networks/terraform-network",
            "priority": 1000,
            "project": "avid-bricolage-362013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/global/firewalls/web-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/avid-bricolage-362013/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "avid-bricolage-362013",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-bricolage-362013/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}